--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,29 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.modal {
+  position: absolute;
+  top: 25%;
+  background-color: aliceblue;
+  width: 50%;
+  height: 50%;
+  right: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.li {
+  cursor: pointer;
+}
+.modal > .close-btn{
+  border: 1px solid black;
+  width: 20%;
+  padding: 20;
+  cursor: pointer;
+}
+input{
+  padding: 20px;
+}
